docs(text-morph): update component API to include preserveCase prop

--- a/app/docs/text-morph/page.mdx
+++ b/app/docs/text-morph/page.mdx
@@ -75,6 +75,7 @@ Animates text by morphing shared letters between words, creating fluid transitio
 | as        | keyof JSX.IntrinsicElements | 'p'       | The HTML tag to render, defaults to paragraph. |
 | className | string                      | undefined | Optional CSS class for styling the component.  |
 | style     | React.CSSProperties         | undefined | Optional inline styles for the component.      |
+| preserveCase | boolean                   | false     | Whether to preserve the original case of the text |
 
 ## Credits
 
