feat: update infinite-slider with speed/speedOnHover

--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -76,12 +76,12 @@ Infinite scrolling slider component that smoothly loops through its children. It
 
 ### InfiniteSlider
 
-| Prop            | Type                       | Default      | Description                                                      |
-| :-------------- | :------------------------- | :----------- | :--------------------------------------------------------------- |
-| children        | React.ReactNode            |              | The child elements to be displayed in the slider.                |
-| gap             | number                     | 16           | The gap between child elements in pixels.                        |
-| duration        | number                     | 25           | The duration of a full cycle of the slider animation in seconds. |
-| durationOnHover | number                     |              | The duration of the animation when hovered, in seconds.          |
-| direction       | 'horizontal' \| 'vertical' | 'horizontal' | The direction of the slider movement.                            |
-| reverse         | boolean                    | false        | Whether to reverse the direction of the slider movement.         |
-| className       | string                     | undefined    | Optional CSS class for styling the component.                    |
+| Prop         | Type                       | Default      | Description                                                           |
+| :----------- | :------------------------- | :----------- | :-------------------------------------------------------------------- |
+| children     | React.ReactNode            |              | The child elements to be displayed in the slider.                     |
+| gap          | number                     | 16           | The gap between child elements in pixels.                             |
+| speed        | number                     | 100          | The speed of the slider animation in pixels per second.               |
+| speedOnHover | number                     |              | The speed of the slider animation when hovered, in pixels per second. |
+| direction    | 'horizontal' \| 'vertical' | 'horizontal' | The direction of the slider movement.                                 |
+| reverse      | boolean                    | false        | Whether to reverse the direction of the slider movement.              |
+| className    | string                     | undefined    | Optional CSS class for styling the component.                         |
