feat: add InstallationCli

--- a/app/docs/accordion/page.mdx
+++ b/app/docs/accordion/page.mdx
@@ -8,7 +8,6 @@ import { AccordionBasic } from './accordion-basic';
 import { AccordionIcons } from './accordion-icons';
 import { AccordionVariant } from './accordion-variant';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Accordion
 
@@ -54,11 +53,7 @@ Here, we apply `-rotate-180` to rotate the icon 180 degrees when its associated 
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/accordion.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='accordion' />
 
 </TabsContent>
 
