--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -7,7 +7,6 @@ import { AnimatedNumberBasic } from './animated-number-basic';
 import { AnimatedNumberCounter } from './animated-number-counter';
 import { AnimatedNumberInView } from './animated-number-in-view';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Animated Number
 
@@ -51,11 +50,7 @@ Easily animate numbers.
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/animated-number.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='animated-number' />
 
 </TabsContent>
 
