--- a/app/docs/carousel/page.mdx
+++ b/app/docs/carousel/page.mdx
@@ -9,7 +9,6 @@ import { CarouselCustomSizes } from './carousel-custom-sizes';
 import { CarouselSpacing } from './carousel-spacing';
 import { CarouselCustomIndicator } from './carousel-custom-indicator';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Carousel
 
@@ -62,11 +61,7 @@ We can use `index` and `onIndexChange` to create custom indicators for the carou
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/carousel.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='carousel' />
 
 </TabsContent>
 
