--- a/app/docs/cursor/page.mdx
+++ b/app/docs/cursor/page.mdx
@@ -8,7 +8,6 @@ import { Cursor1 } from './cursor-1';
 import { Cursor2 } from './cursor-2';
 import { Cursor3 } from './cursor-3';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Cursor
 
@@ -48,11 +47,7 @@ A custom cursor component with optional spring animations. It can be globally ap
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/cursor.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='cursor' />
 
 </TabsContent>
 
