--- a/app/docs/glow-effect/page.mdx
+++ b/app/docs/glow-effect/page.mdx
@@ -8,7 +8,6 @@ import { GlowEffectCardBackground } from './glow-effect-card-background';
 import { GlowEffectCardMode } from './glow-effect-card-mode';
 import { GlowEffectButton } from './glow-effect-button';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Glow Effect
 
@@ -50,11 +49,7 @@ You can use different `modes` to animate the glow effect.
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/glow-effect.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='glow-effect' />
 
 </TabsContent>
 
