--- a/app/docs/morphing-dialog/page.mdx
+++ b/app/docs/morphing-dialog/page.mdx
@@ -8,7 +8,6 @@ import { MorphingDialogBasicOne } from './morphing-dialog-basic-1';
 import { MorphingDialogBasicTwo } from './morphing-dialog-basic-2';
 import { MorphingDialogBasicImage } from './morphing-dialog-image';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Morphing Dialog
 
@@ -48,11 +47,7 @@ A dialog that uses layout animations to transition content into a focused view. 
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/morphing-dialog.json" "https://motion-primitives.com/h/useClickOutside.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='morphing-dialog' />
 
 </TabsContent>
 
