--- a/app/docs/morphing-popover/page.mdx
+++ b/app/docs/morphing-popover/page.mdx
@@ -8,7 +8,6 @@ import { MorphingPopoverBasic } from './morphing-popover-basic';
 import { MorphingPopoverCustomTransitionVariants } from './morphing-popover-custom-transition-variants';
 import { MorphingPopoverTextarea } from './morphing-popover-textarea';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Morphing Popover
 
@@ -50,11 +49,7 @@ You can pass a custom transition and variants to the popover with the `variants`
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/morphing-popover.json" "https://motion-primitives.com/h/useClickOutside.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='morphing-popover' />
 
 </TabsContent>
 
