--- a/app/docs/progressive-blur/page.mdx
+++ b/app/docs/progressive-blur/page.mdx
@@ -8,7 +8,6 @@ import { ProgressiveBlurBasic } from './progressive-blur-basic';
 import { ProgressiveBlurHover } from './progressive-blur-hover';
 import { ProgressiveBlurSlider } from './progressive-blur-slider';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Progressive blur
 
@@ -50,11 +49,7 @@ You can change the direction of the blur effect with the `direction` prop.
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/progressive-blur.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='progressive-blur' />
 
 </TabsContent>
 
