--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -8,7 +8,6 @@ import { ScrollProgressBasic1 } from './scroll-progress-basic-1';
 import { ScrollProgressBasic2 } from './scroll-progress-basic-2';
 import { ScrollProgressBasic3 } from './scroll-progress-basic-3';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Scroll Progress
 
@@ -48,11 +47,7 @@ Animated scroll progress for your web pages.
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/scroll-progress.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='scroll-progress' />
 
 </TabsContent>
 
