--- a/app/docs/sliding-number/page.mdx
+++ b/app/docs/sliding-number/page.mdx
@@ -7,7 +7,6 @@ import { Clock } from './clock';
 import { SlidingNumberBasic } from './sliding-basic';
 import { SlidingNumberWithSlider } from './sliding-slider';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Sliding Number
 
@@ -48,11 +47,7 @@ A component that slides numbers.
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/sliding-number.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='sliding-number' />
 
 </TabsContent>
 
