--- a/app/docs/spinning-text/page.mdx
+++ b/app/docs/spinning-text/page.mdx
@@ -8,7 +8,6 @@ import { SpinningTextBasic } from './spinning-text-basic';
 import { SpinningTextCustomTransition } from './spinning-text-custom-transition';
 import { SpinningTextCustomVariants } from './spinning-text-custom-variants';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Spinning Text
 
@@ -51,11 +50,7 @@ Easily animate text circularly. Customize the animation with variants and transi
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/spinning-text.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='spinning-text' />
 
 </TabsContent>
 
