--- a/app/docs/text-roll/page.mdx
+++ b/app/docs/text-roll/page.mdx
@@ -54,11 +54,7 @@ A text roll component that rotates each character, fully customizable for nice t
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/text-roll.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='text-roll' />
 
 </TabsContent>
 
