--- a/app/docs/text-scramble/page.mdx
+++ b/app/docs/text-scramble/page.mdx
@@ -8,7 +8,6 @@ import { TextScrambleBasic } from './text-scramble-basic';
 import { TextScrambleCustomCharacterDuration } from './text-scramble-custom-char-duration';
 import { TextScrambleCustomTrigger } from './text-scramble-custom-trigger';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Text Scramble
 
@@ -53,11 +52,7 @@ Text animation that transforms text by randomly cycling through characters befor
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/text-scramble.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='text-scramble' />
 
 </TabsContent>
 
