--- a/app/docs/border-trail/page.mdx
+++ b/app/docs/border-trail/page.mdx
@@ -8,7 +8,6 @@ import { BorderTrailCard1 } from './border-trail-card-1';
 import { BorderTrailCard2 } from './border-trail-card-2';
 import { BorderTrailTextarea } from './border-trail-textarea';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Border Trail
 
@@ -48,11 +47,7 @@ Animated border effect that moves along the edges of its parent container.
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/border-trail.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='border-trail' />
 
 </TabsContent>
 
