--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -13,7 +13,6 @@ import { TextEffectPerLine } from './text-effect-line';
 import { TextEffectWithExit } from './text-effect-exit';
 import { TextEffectSpeed } from './text-effect-speed';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Text Effect
 
@@ -98,12 +97,7 @@ You can control the speed of the animation by using the `speedReveal` and `speed
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/text-effect.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
-
+<InstallationCli value='text-effect' />
 </TabsContent>
 
 <TabsContent value="manual">
@@ -126,21 +120,21 @@ You can control the speed of the animation by using the `speedReveal` and `speed
 
 ### TextEffect
 
-| Prop                    | Type                                                     | Default   | Description                                                     |
-| :---------------------- | :------------------------------------------------------- | :-------- | :-------------------------------------------------------------- |
-| children                | string                                                   |           | The text content to be animated.                                |
-| per                     | 'word' \| 'char' \| 'line'                               | 'word'    | Defines whether animation applies per word, character, or line. |
-| as                      | keyof JSX.IntrinsicElements                              | 'p'       | The HTML tag to render, defaults to paragraph.                  |
-| variants                | `{ container?: Variants; item?: Variants; }`             | undefined | Custom variants for container and item animations.              |
-| className               | string                                                   | undefined | Optional CSS class for styling the component.                   |
+| Prop                    | Type                                                        | Default   | Description                                                     |
+| :---------------------- | :---------------------------------------------------------- | :-------- | :-------------------------------------------------------------- |
+| children                | string                                                      |           | The text content to be animated.                                |
+| per                     | 'word' \| 'char' \| 'line'                                  | 'word'    | Defines whether animation applies per word, character, or line. |
+| as                      | keyof JSX.IntrinsicElements                                 | 'p'       | The HTML tag to render, defaults to paragraph.                  |
+| variants                | `{ container?: Variants; item?: Variants; }`                | undefined | Custom variants for container and item animations.              |
+| className               | string                                                      | undefined | Optional CSS class for styling the component.                   |
 | preset                  | 'blur-sm' \| 'fade-in-blur' \| 'scale' \| 'fade' \| 'slide' | 'fade'    | Preset animations to apply to the text.                         |
-| delay                   | number                                                   | 0         | Delay before the animation starts.                              |
-| trigger                 | boolean                                                  | true      | Controls whether the animation should be triggered.             |
-| onAnimationComplete     | () => void                                               | undefined | Callback function when the animation completes.                 |
-| onAnimationStart        | () => void                                               | undefined | Callback function when the animation starts.                    |
-| segmentWrapperClassName | string                                                   | undefined | Optional CSS class for styling segment wrappers.                |
-| style                   | CSSProperties                                            | undefined | Optional inline styles for the component.                       |
-| containerTransition     | Transition                                               | undefined | Optional transition for the container.                          |
-| segmentTransition       | Transition                                               | undefined | Optional transition for the segments.                           |
-| speedReveal             | number                                                   | 1         | Controls the speed of the reveal animation.                     |
-| speedSegment            | number                                                   | 1         | Controls the speed of the animation.                            |
+| delay                   | number                                                      | 0         | Delay before the animation starts.                              |
+| trigger                 | boolean                                                     | true      | Controls whether the animation should be triggered.             |
+| onAnimationComplete     | () => void                                                  | undefined | Callback function when the animation completes.                 |
+| onAnimationStart        | () => void                                                  | undefined | Callback function when the animation starts.                    |
+| segmentWrapperClassName | string                                                      | undefined | Optional CSS class for styling segment wrappers.                |
+| style                   | CSSProperties                                               | undefined | Optional inline styles for the component.                       |
+| containerTransition     | Transition                                                  | undefined | Optional transition for the container.                          |
+| segmentTransition       | Transition                                                  | undefined | Optional transition for the segments.                           |
+| speedReveal             | number                                                      | 1         | Controls the speed of the reveal animation.                     |
+| speedSegment            | number                                                      | 1         | Controls the speed of the animation.                            |
