--- a/app/docs/text-shimmer/page.mdx
+++ b/app/docs/text-shimmer/page.mdx
@@ -7,7 +7,6 @@ export const metadata = {
 import { TextShimmerBasic } from './text-shimmer-basic';
 import { TextShimmerColor } from './text-shimmer-color';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Text Shimmer
 
@@ -42,11 +41,7 @@ You can use the `[--base-color]` and `[--base-gradient-color]` CSS variables to 
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/text-shimmer.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='text-shimmer' />
 
 </TabsContent>
 
