feat: update installation doc

--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -7,7 +7,6 @@ import { InfiniteSliderBasic } from './infinite-slider-basic';
 import { InfiniteSliderHoverSpeed } from './infinite-slider-hover-speed';
 import { InfiniteSliderVertical } from './infinite-slider-vertical';
 import ComponentCodePreview from '@/components/website/component-code-preview';
-import CodeBlock from '@/components/website/code-block';
 
 # Infinite Slider
 
@@ -48,11 +47,7 @@ Infinite scrolling slider component that smoothly loops through its children. It
 
 <TabsContent value="cli">
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/infinite-slider.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='infinite-slider' />
 
 </TabsContent>
 
