--- a/app/docs/installation/page.mdx
+++ b/app/docs/installation/page.mdx
@@ -35,11 +35,7 @@ Add [Lucide React](https://lucide.dev/) icons:
 
 You can now start adding components to your project.
 
-<CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/text-effect.json"`}
-  lang='bash'
-  className='h-[52px]'
-/>
+<InstallationCli value='text-effect' />
 
 The command above will add the Text Effect component to your project. You can then import it anywhere in your project.
 
