fix: infinite slider got new option to fill elements, resolving #130

--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -80,3 +80,4 @@ Infinite scrolling slider component that smoothly loops through its children. It
 | direction    | 'horizontal' \| 'vertical' | 'horizontal' | The direction of the slider movement.                                 |
 | reverse      | boolean                    | false        | Whether to reverse the direction of the slider movement.              |
 | className    | string                     | undefined    | Optional CSS class for styling the component.                         |
+| fillElements | boolean                    | false        | This controll to fill children with respect to container's width      |
