feat(DockItem): add optional onClick support
Allows DockItem to accept an optional onClick prop

--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -67,10 +67,11 @@ A versatile UI element that provides a flexible and customizable way to organize
 
 ### DockItem
 
-| Prop      | Type      | Default   | Description                                   |
-| :-------- | :-------- | :-------- | :-------------------------------------------- |
-| children  | ReactNode |           | DockLabel and DockIcon                        |
-| className | string    | undefined | Optional CSS class for styling the component. |
+| Prop      | Type       | Default   | Description                                                |
+| :-------- | :--------- | :-------- | :--------------------------------------------------------- |
+| children  | ReactNode  |           | DockLabel and DockIcon                                     |
+| className | string     | undefined | Optional CSS class for styling the component.              |
+| onClick   | () => void | undefined | Optional click handler triggered when the item is clicked. |
 
 ### DockLabel
 
